@@ -19,6 +19,7 @@
 #include <string.h>
 #include <string>
 #include <stdint.h>
+#include <unistd.h>
 #include <errno.h>
 #include <fcntl.h>
 #include <sys/stat.h>
