@@ -1,6 +1,9 @@
 0.8.8 (?/??/2013):
 ------------------
 
+- Fixed bug that could cause segfault when passing an invalid partition
+  number to sgdisk's -i/--info command.
+
 - Added new type code: 933AC7E1-2EB4-4F13-B844-0E14E2AEF915, or gdisk code
   8302, for Linux /home partitions. This type code is used by recent
   versions of systemd to permit /home to be auto-mounted; see
